--- a/index.html
+++ b/index.html
@@ -8,9 +8,6 @@
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
   <link rel="stylesheet" type="text/css" href="responsive.css">
   <link rel="shortcut icon" href="favicon.ico" >
-  <!--     ┬ ┬┌─┐  ┌─┐┬─┐┌─┐        -->
-  <!--     │││├┤   ├─┤├┬┘├┤         -->
-  <!--     └┴┘└─┘  ┴ ┴┴└─└─┘        -->
   <!--     ╔═╗╦═╗╔═╗╔═╗╔═╗╔╦╗╔═╗    -->
   <!--     ╠═╝╠╦╝║ ║║ ╦╠═╣ ║ ║╣     -->
   <!--     ╩  ╩╚═╚═╝╚═╝╩ ╩ ╩ ╚═╝    -->
@@ -46,7 +43,7 @@
     <div class="lesson-wrapper">
       <div class="container">
         <div class="heading">
-          <h2>Learn Where to Get Started!</h2>
+          <h2>Learn Where to Get Started in Progate!</h2>
         </div>
         <div class="lessons">
           <div class="lesson">
@@ -85,7 +82,7 @@
       <div class="container">
         <div class="heading">
           <h2>Ready to become an awesome programmer?</h2>
-          <h3>Let's learn to code, learn to be creative!</h3>
+          <h3>Let's learn to code, learn to be creative in Progate!</h3>
         </div>
         <span class="btn message">Start Learning</span>
       </div>
@@ -93,7 +90,7 @@
     <footer>
       <div class="container">
         <img src="https://prog-8.com/images/html/advanced/footer_logo.png">
-        <p>Learn to code, learn to be creative.</p>
+        <p>Learn to code, learn to be creative in Progate.</p>
       </div>
     </footer>
   </body>
